fixed feed submenu bug when there are a lot of cities, added sidebar scrollbar

--- a/app/assets/stylesheets/feed.less
+++ b/app/assets/stylesheets/feed.less
@@ -4,10 +4,12 @@
 	float: left;
 	margin-top: 40px;
 	width: 98px;
+	overflow-x: hidden;
 	position: fixed;
 	top: 0;
 	bottom: 0;
 	padding-top: 60px;
+	overflow-y: auto;
 }
 .all_interests_li{
 	padding-bottom: 8px;
@@ -72,9 +74,11 @@
 /*SUBMENU*/
 .feed_submenu {
 	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.4);
-	height: 40px;
 	padding-left: 20px;
 	padding-top: 12px;
+	padding: 10px 0;
+	line-height: 35px;
+	padding-right: 96px;
 	margin-left: -50px;
 	margin-bottom: 10px;
 	padding-left: 60px;
